--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,21 @@ dependencies:
     sdk: flutter
 
   # Utility Packages
+  http: ^1.1.2
+  intl: ^0.19.0
+  logger: ^2.0.1
+  url_launcher: ^6.1.12
+  flutter_native_splash: ^2.3.2
+  smooth_page_indicator: ^1.1.0
+
+
   # Icons
   iconsax: ^0.0.8
   cupertino_icons: ^1.0.2
 
   # State Management
   get: ^4.6.5
+  get_storage: ^2.1.1
 
   # Product Specific
 
@@ -33,7 +42,7 @@ dev_dependencies:
     sdk: flutter
 
   
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
 
@@ -44,7 +53,8 @@ flutter:
   assets:
     - assets/logos/
     - assets/icons/brands/
-    - assets/images/
+    - assets/images/on_boarding_images/
+    - assets/images/animations/
 
   #--------------LOCAL FONTS--------------#
 
