--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - assets/icons/categories/
     - assets/images/on_boarding_images/
     - assets/images/animations/
+    - assets/images/content/
 
   #--------------LOCAL FONTS--------------#
 
