--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   url_launcher: ^6.1.12
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
-  carousel_slider: ^4.2.1
+
 
 
   # Icons
@@ -33,6 +33,9 @@ dependencies:
   get_storage: ^2.1.1
 
   # Product Specific
+  readmore: ^2.2.0
+  carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
 
 
 
@@ -60,6 +63,7 @@ flutter:
     - assets/images/on_boarding_images/
     - assets/images/animations/
     - assets/images/content/
+    - assets/images/reviews/
 
   #--------------LOCAL FONTS--------------#
 
