--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/images/animations/
     - assets/images/content/
     - assets/images/reviews/
+    - assets/icons/payment_methods/
 
   #--------------LOCAL FONTS--------------#
 
