--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
 
+  # Firebase
+  firebase_core: ^2.24.2
+
 
 
 #--------------PACKAGES END--------------#
