--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
   http: ^1.1.2
   intl: ^0.19.0
   logger: ^2.0.1
+  lottie: ^2.7.0
   url_launcher: ^6.1.12
+  connectivity_plus: ^5.0.2
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
 
@@ -39,6 +41,8 @@ dependencies:
 
   # Firebase
   firebase_core: ^2.24.2
+  firebase_auth: ^4.14.0
+  cloud_firestore: ^4.13.1
 
 
 
