--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,11 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.0.1
   lottie: ^2.7.0
+  shimmer: ^3.0.0
+  image_picker: ^1.0.5
   url_launcher: ^6.1.12
   connectivity_plus: ^5.0.2
+  cached_network_image: ^3.3.0
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
 
@@ -44,6 +47,9 @@ dependencies:
   firebase_auth: ^4.14.0
   cloud_firestore: ^4.13.1
   google_sign_in: ^6.2.1
+  firebase_storage: ^11.5.6
+
+
 
 
 
